# deepjoint-algo

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
docker/: README.md  run_in_docker.sh
docker/deepjoint_r/: Dockerfile  r_pkg_install.R
docker/deepjoint_torch/: Dockerfile
models/torch_model/: averaged_weights_valid_dense_loss.ckpt
models/torch_model/pretrained_weights/: breast_model.pth  dense_model.pth
requirements/: README.md  requirements-dev.txt  requirements.txt
scripts/deepjoint_r/: 01_ModelFit_LeftTrunc_DAorPD_CVCS.R  02_ModelFit_ResSum_LeftTrunc_DAorPD_CVCS.R  03_1_DynPred_withCrossVal_ModelFit_Fold1.R  03_2_DynPred_withCrossVal_ModelFit_Fold2.R  03_3_DynPred_withCrossVal_ModelFit_Fold3.R  03_4_DynPred_withCrossVal_ModelFit_Fold4.R  03_5_DynPred_withCrossVal_ModelFit_Fold5.R  04_DynPred_withCrossVal_PredictionsCalculation.R  05_DynPred_withCrossVal_AUCandBSCalculation.R  06_DynPred_withCrossVal_ResultsSummary.R  launch_DynPred_withCrossVal.sh  launch_ModelFit.sh
scripts/deepjoint_torch/: __init__.py  dcm_to_h5.py  infer.py  launch_dcm_to_h5.sh  launch_eval.sh  launch_infer.sh  launch_train.sh  train.py  visit-level_metrics_computation.py
src/annot_tool/: README.md  app.py  components.py  constants.py  data.py  main.py
src/deepjoint_r/: jm_consensus_source_script_CV.R
src/deepjoint_torch/: __init__.py  annotations.py  callbacks.py  constants.py  dataset.py  dcm.py  dcm_utils.py  h5.py  infer.py  log.py  losses.py  model.py  transforms.py
test_data/deepjoint_r/: data.csv  data_surv.csv
test_data/deepjoint_torch/: annotations.csv
test_data/deepjoint_torch/h5_dir/: 156d4b5e-2913-06e2-28e1-290cc950cf1b.h5  2e56c410-2caa-b6c8-21d0-959875037082.h5  494f5643-7598-6c52-d974-e3bdb2c7c193.h5  941ce5bd-ef82-6af3-d282-0ed9fe67df3a.h5  fe06b53d-d8ea-3a63-3c5a-8ac556b43987.h5  tags.csv
tests/: deepjoint_torch_test.py  test_deepjoint_torch.sh
tests/deepjoint_r/: 01_JointModelFit_DA_CVCS.R  02_DynPred_withCrossVal_DA_CVCS.R
